--- a/src/components/App/css/index.css
+++ b/src/components/App/css/index.css
@@ -45,6 +45,9 @@ h2 {
   text-transform: uppercase;
   line-height: var(--headings-line-height);
   font-weight: var(--font-weight-normal);
+  @media (max-width: 1024px) {
+    font-size: calc(var(--font-size-base) * 2.5);
+  }
 }
 
 h3 {
@@ -100,6 +103,7 @@ img {
 
 .container {
   max-width: var(--layout-width);
+  overflow: hidden;
   margin: 0 auto;
   padding: 0 calc(var(--spacer) * 2);
 }
@@ -108,6 +112,34 @@ section {
   & .section-container {
     padding: calc(var(--spacer) * 5);
     position: relative;
+    @media (max-width: 768px) {
+      padding: calc(var(--spacer) * 2);
+    }
+  }
+}
+
+ul {
+  &.hovered {
+    & li {
+      position: relative;
+      &::after {
+        opacity: 0;
+        content: "";
+        width: 100%;
+        height: 5px;
+        top: 35px;
+        left: 0;
+        position: absolute;
+        background: rgb(54,193,172);
+        background: linear-gradient(135deg, rgba(54,193,172,0) 20%, rgba(54,193,172,1) 20%, rgba(54,193,172,1) 80%, rgba(54,193,172,0) 80%, rgba(54,193,172,0) 100%);
+        transition: opacity 0.5s;
+      }
+      &:hover {
+        &::after {
+          opacity: 1;
+        }
+      }
+    }
   }
 }
 
