Add meta viewport to index

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Get Saleor</title>  
+    <title>Get Saleor</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <% if (htmlWebpackPlugin.options.googleTagManager) { %>
       <!-- Google Tag Manager -->
       <script>
