Add smooth scroll to the site

--- a/src/components/App/css/index.css
+++ b/src/components/App/css/index.css
@@ -6,7 +6,9 @@
 
 html, body {
   margin: 0;
-  height: 100%;
+  height: 100vh;
+  overflow: hidden scroll;
+  scroll-behavior: smooth;
 }
 
 body {
