--- a/src/components/App/css/variables.css
+++ b/src/components/App/css/variables.css
@@ -10,6 +10,7 @@
   --background-color: #111010;
   --layout-width: 1300px;
   --footer-border: #13657F;
+  --mobile-background: #130D44;
 
   --xs-max-width: 576px; /* xs */
   --sm-min-width: 768px; /* sm */
