--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,19 @@
 header {
   & .logo {
     padding: calc(var(--spacer) * 3) 0;
+    @media (max-width: 768px) {
+      padding: calc(var(--spacer) * 1.5) 0;
+    }
+    &.open {
+      display: block;
+      position: fixed;
+      top: 0;
+      left: var(--spacer);
+      z-index: 999;
+      @media (max-width: 768px) {
+        left: calc(var(--spacer) * 2);
+      }
+    }
   }
 
   & .menu {
@@ -8,15 +21,141 @@ header {
       display: flex;
       justify-content: space-between;
       & li {
+        position: relative;
+        top: 0;
         padding: calc(var(--spacer) * 3.5) 0;
+        @media (max-width: 768px) {
+          padding: calc(var(--spacer) * 1.5) 0;
+        }
+        & .count { display: none; }
         & a {
           font-size: var(--font-size-lg);
           font-weight: var(--font-weight-light);
         }
       }
-    }
-    @media (max-width: 768px) {
-      display: none;
+      @media (max-width: 768px) {
+        height: 0;
+        visibility: hidden;
+        opacity: 0;  
+      }
+      &.menu-mobile {
+        width: calc(100% - 4rem);
+        height: 100%;
+        display: block;
+        visibility: visible;
+        opacity: 1;
+        position: fixed;
+        left: 0;
+        top: 0;
+        z-index: 998;
+        background: var(--mobile-background);
+        padding: calc(var(--spacer) * 7) calc(var(--spacer) * 2) 0 calc(var(--spacer) * 2);
+        & li {
+          position: relative;
+          padding: 0 calc(var(--spacer) * 4);
+          text-align: left;
+          top: 1rem;
+          text-transform: uppercase;
+          font-size: calc(var(--font-size-base) * 2);
+          & a {
+            color: var(--body-color);
+          }
+          & .count { 
+            display: inline;
+            font-size: calc(var(--font-size-base) * 1.5);
+            position: absolute;
+            left: 0;
+            bottom: calc(var(--spacer) * 0.2);
+            color: var(--primaryColor);
+          }
+          &.github-link {
+            position: absolute;
+            padding-left: 0;
+            left: calc(var(--spacer) * 2);
+            top: initial;
+            bottom: calc(var(--spacer) * 9);
+            & a {
+              color: var(--primaryColor);
+            }
+          }
+        }
+      }
+      &.mobile-btn {
+        display: none;
+        position: relative;
+        opacity: 1;
+        visibility: visible;
+        width: 100%;
+        grid-template-columns: repeat(12, 1fr);
+        grid-row: 1;
+        @media (max-width: 768px) {
+          display: inline-grid;
+          padding: calc(var(--spacer) * 2) 0 calc(var(--spacer) * 4.5) 0;
+        }
+        & li {
+          grid-column: -6 / span 4;
+          @media (max-width: 576px) {
+            grid-column: -9 / span 6;
+          }
+          padding: 0;      
+          &.github-link {
+            &.open {
+              visibility: hidden;
+            }
+          }
+          &.menu-icon {
+            grid-column: -2 / span 4;
+            @media (max-width: 600px) {
+              grid-column: -3 / span 4;
+            }
+            width: 60px;
+            height: 40px;
+            position: relative;
+            right: var(--spacer);
+            transform: rotate(0deg);
+            cursor: pointer;
+            & span {
+              display: block;
+              position: absolute;
+              height: 5px;
+              width: 100%;
+              background: var(--primaryColor);
+              border-radius: 5px;
+              opacity: 1;
+              right: 0;
+              transform: rotate(0deg);
+              transition: .25s ease-in-out;
+              &:nth-child(1) { width: 90%; top: 0; }
+              &:nth-child(2) { width: 70%; top: 15px; }
+              &:nth-child(3) { width: 70%; top: 15px; }
+              &:nth-child(4) { width: 50%; top: 30px; }
+            }
+            &.open {
+              & span {
+                &:nth-child(1) { 
+                  top: 18px;
+                  width: 0%;
+                  left: 50%;
+                }
+                &:nth-child(2) { width: 90%; transform: rotate(45deg); }
+                &:nth-child(3) { width: 90%; transform: rotate(-45deg); }
+                &:nth-child(4) {
+                  top: 18px;
+                  width: 0%;
+                  left: 50%;
+                }
+              }
+            }
+            &.open {
+              display: block;
+              position: fixed;
+              top: calc(var(--spacer) * 2);
+              right: var(--spacer);
+              z-index: 999;
+            }
+          }
+        }
+      }
     }
   }
 }
